# tangerine

./: AUTHORS  DAAP.csproj  FilePlugin.csproj  GooglePlugin.csproj  Makefile.am  PSetup.ini  README  SystemTrayPlugin.csproj  TODO.Windows  TagLib.csproj  Tangerine.csproj  Tangerine.sln  TangerineDaemon.csproj  TangerineProperties.csproj  autogen.sh  configure.ac  iTunesPlugin.csproj  sample.conf  tangerine.iss  tangerine.pc.in
TangerinePrefPane/: Info.plist  Makefile.am  TangerineIniParser.h  TangerineIniParser.m  TangerinePrefPanePref.h  TangerinePrefPanePref.m  TangerinePrefPane_Prefix.pch  net.snorp.Tangerine.plist  start-daemon.sh  tangerine-128.tiff  tangerine-64.tiff
TangerinePrefPane/TangerinePrefPane.xcodeproj/: project.pbxproj  snorp.mode1  snorp.pbxuser
TangerinePrefPane/TangerinePrefPanePref.nib/: classes.nib  info.nib  objects.nib
icons/: Makefile.am
plugins/: Makefile.am
plugins/amarok/: AmarokPlugin.cs  Makefile.am  amarok.provider
plugins/banshee/: BansheePlugin.cs  Makefile.am  banshee.provider
plugins/beagle/: BeaglePlugin.cs  Makefile.am  beagle.provider
plugins/file/: FilePlugin.cs  Makefile.am
plugins/google/: GooglePlugin.cs  google.provider
plugins/ipod/: IPodPlugin.cs  Makefile.am
plugins/itunes/: Makefile.am  iTunesPlugin.cs  itunes.provider
plugins/lsongs/: LsongsPlugin.cs  Makefile.am  lsongs.provider
plugins/muine/: Makefile.am  MuineDatabase.cs.in  MuinePlugin.cs  muine.provider
plugins/rhythmbox/: Makefile.am  RBPlugin.cs  RhythmboxPlugin.cs  rhythmbox.provider
plugins/session/: Makefile.am  SessionPlugin.cs  session-glue.c
plugins/spotlight/: Makefile.am  SpotlightPlugin.cs  spotlight.provider
plugins/spotlight/SpotlightHelper/: Makefile  Makefile.am  QueryHelper.h  QueryHelper.m  SpotlightHelper_Prefix.pch
plugins/spotlight/SpotlightHelper/SpotlightHelper.xcodeproj/: project.pbxproj  snorp.mode1  snorp.pbxuser
plugins/windows-tray/: QuitDialog.Designer.cs  QuitDialog.cs  SystemTrayPlugin.cs
src/: AssemblyInfo.cs  CreationWatcher.cs  Daemon.cs  EntryPoint.cs  IconThemeUtils.cs  Inotify.cs  Makefile.am  PluginManager.cs  PropertiesWindow.cs  Provider.cs  UnixSignal.cs  WindowsProperties.Designer.cs  WindowsProperties.cs  WindowsProperties.resx  inotify-glue.c  tangerine-properties.desktop  tangerine-properties.exe.config  tangerine-properties.glade  tangerine-properties.in  tangerine.in
